Fix CORS, update JWT authentication secret, and successfully wire up local DB for code submissions